<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:weightSum="9"
    tools:context=".Aarti"
    android:padding="5dp">
    <LinearLayout
        android:background="@color/colorMorning"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/MorningBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMorning"
            android:onClick="MorningAartiPlayer"
            android:text="@string/mrng_aarti"
            android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout

        android:background="@color/colorNoon"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_weight="3" >

        <Button
            android:id="@+id/NoonBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorNoon"
            android:onClick="NoonAartiPlayer"
            android:text="@string/noon_aarti"
            android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout
        android:background="@color/colorEvening"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_weight="3" >

        <Button
            android:id="@+id/EveningBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorEvening"
            android:onClick="EveningAartiPlayer"
            android:text="@string/eve_aarti"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    ads:adSize="BANNER"
    ads:adUnitId="ca-app-pub-3940256099942544~3347511713">
</com.google.android.gms.ads.AdView>
</LinearLayout>
