<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorBackground"
    tools:context=".TimerSetting">


    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="38dp"
        android:fontFamily="font/tienne_black"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_time"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="119dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/next" />

    <Button
        android:id="@+id/imageButton3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_above="@+id/imageButton2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="39dp"
        android:background="@color/colorMorning"
        android:drawableLeft="@android:drawable/ic_menu_recent_history"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_mrng_aarti_time" />

    <Button
        android:id="@+id/imageButton2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_above="@+id/imageButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="39dp"
        android:background="@color/colorNoon"
        android:drawableLeft="@android:drawable/ic_menu_recent_history"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_noon_aarti_time" />

    <Button
        android:id="@+id/imageButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_above="@+id/btnSubmit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="68dp"
        android:background="@color/colorEvening"
        android:drawableLeft="@android:drawable/ic_menu_recent_history"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_evening_aarti_time" />

<!--    <com.google.android.gms.ads.AdView-->
<!--        xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        ads:adSize="BANNER"-->
<!--        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
<!--    </com.google.android.gms.ads.AdView>-->
</RelativeLayout>